fixed dark mode about page

--- a/components/about/ourHistory/style.module.scss
+++ b/components/about/ourHistory/style.module.scss
@@ -16,6 +16,15 @@
         color: color(primary-white);
       }
     }
+
+    .cardStyle{
+      .infoStyle{
+        .ourHistoryContent{
+          color: color(primary-white);
+          opacity: 0.6;
+        }
+      }
+    }
   }
 
   .ourHistoryTop {
